--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -852,38 +852,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
-        "outputId": "3829b1d6-0c64-4baf-bfc1-5be228050f8f"
+        "id": "adbc4202-9586-4e18-b8d6-54291c2174f1"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Variable Name  Coefficient    Std Error      T-Statistic    P-Value        \n",
-            "----------------------------------------------------------------------\n",
-            "X1             1.9805         0.1146         17.2800        0.0000         \n",
-            "X2             3.0370         0.1101         27.5745        0.0000         \n",
-            "intercept      0.0371         0.1070         0.3472         0.7292         \n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "#si-exercise\n",
         "\n",
-        "import numpy as np\n",
         "import pandas as pd\n",
+        "import numpy as np\n",
         "import statsmodels.api as sm\n",
         "\n",
-        "# si-exercise\n",
         "class RegressionModel:\n",
-        "    def __init__(self, x, y, create_intercept=True, regression_type=\"ols\"):\n",
+        "\n",
+        "    def __init__(self, x, y, create_intercept=False, regression_type=\"ols\"):\n",
         "        self.x = x\n",
         "        self.y = y\n",
         "        self.create_intercept = create_intercept\n",
@@ -894,46 +878,32 @@
         "            self.add_intercept()\n",
         "\n",
         "    def add_intercept(self):\n",
-        "        \"\"\"Add an intercept column to x if specified.\"\"\"\n",
-        "        self.x['intercept'] = 1\n",
+        "        self.x = self.x.assign(intercept=pd.Series([1] * np.shape(self.x)[0]))\n",
         "\n",
         "    def ols_regression(self):\n",
-        "        \"\"\"Perform OLS regression and store results in the results dictionary.\"\"\"\n",
         "        if self.regression_type == \"ols\":\n",
         "            model = sm.OLS(self.y, self.x).fit()\n",
+        "            summary = model.summary()\n",
         "            params = model.params\n",
         "            bse = model.bse\n",
         "            tvalues = model.tvalues\n",
         "            pvalues = model.pvalues\n",
         "\n",
-        "            for var in self.x.columns:\n",
-        "                self.results[var] = {\n",
-        "                    'coefficient': params[var],\n",
-        "                    'standard_error': bse[var],\n",
-        "                    't_stat': tvalues[var],\n",
-        "                    'p_value': pvalues[var]\n",
+        "            # Storing results in the required format\n",
+        "            for param in params.index:\n",
+        "                self.results[param] = {\n",
+        "                    'coefficient': params[param],\n",
+        "                    'standard_error': bse[param],\n",
+        "                    't_stat': tvalues[param],\n",
+        "                    'p_value': pvalues[param]\n",
         "                }\n",
         "\n",
         "    def summary(self):\n",
-        "        \"\"\"Print the regression results in a table format.\"\"\"\n",
-        "        print(f\"{'Variable Name':<15}{'Coefficient':<15}{'Std Error':<15}{'T-Statistic':<15}{'P-Value':<15}\")\n",
-        "        print(\"-\" * 70)\n",
-        "        for var, stats in self.results.items():\n",
-        "            print(f\"{var:<15}{stats['coefficient']:<15.4f}{stats['standard_error']:<15.4f}{stats['t_stat']:<15.4f}{stats['p_value']:<15.4f}\")\n",
-        "\n",
-        "# Example use\n",
-        "if __name__ == \"__main__\":\n",
-        "    # Creating dummy data for testing\n",
-        "    x = pd.DataFrame({\n",
-        "        'X1': np.random.randn(100),\n",
-        "        'X2': np.random.randn(100)\n",
-        "    })\n",
-        "    y = pd.Series(2 * x['X1'] + 3 * x['X2'] + np.random.randn(100))\n",
-        "\n",
-        "    # Create an instance of RegressionModel\n",
-        "    model = RegressionModel(x, y, create_intercept=True, regression_type=\"ols\")\n",
-        "    model.ols_regression()\n",
-        "    model.summary()\n"
+        "        # Print formatted summary table\n",
+        "        print(f\"{'Variable name':<12} {'Coefficient':>12} {'Std Error':>12} {'t-statistic':>12} {'p-value':>12}\")\n",
+        "        for variable, result in self.results.items():\n",
+        "            print(f\"{variable:<12} {result['coefficient']:>12.4f} {result['standard_error']:>12.4f} {result['t_stat']:>12.4f} {result['p_value']:>12.4e}\")\n",
+        "\n"
       ]
     }
   ],
