--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -852,7 +852,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 6,
       "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
       "metadata": {
         "id": "adbc4202-9586-4e18-b8d6-54291c2174f1"
@@ -861,35 +861,47 @@
       "source": [
         "#si-exercise\n",
         "\n",
-        "import pandas as pd\n",
         "import numpy as np\n",
         "import statsmodels.api as sm\n",
         "\n",
         "class RegressionModel:\n",
-        "\n",
         "    def __init__(self, x, y, create_intercept=False, regression_type=\"ols\"):\n",
-        "        self.x = x\n",
-        "        self.y = y\n",
+        "        \"\"\"\n",
+        "        Initializes the RegressionModel class.\n",
+        "\n",
+        "        :param x: Independent variables (numpy array or pandas dataframe).\n",
+        "        :param y: Dependent variable (numpy array or pandas dataframe).\n",
+        "        :param create_intercept: Boolean, whether to add an intercept column to x.\n",
+        "        :param regression_type: String, \"ols\" for ordinary least squares regression.\n",
+        "        \"\"\"\n",
+        "        self.x = x.copy()  # Ensure x is not modified in place\n",
+        "        self.y = y.copy()\n",
         "        self.create_intercept = create_intercept\n",
         "        self.regression_type = regression_type\n",
         "        self.results = {}\n",
         "\n",
+        "        # If intercept is requested, add an intercept column to x\n",
         "        if self.create_intercept:\n",
         "            self.add_intercept()\n",
         "\n",
         "    def add_intercept(self):\n",
-        "        self.x = self.x.assign(intercept=pd.Series([1] * np.shape(self.x)[0]))\n",
+        "        \"\"\"Adds an intercept (column of ones) to the independent variable x.\"\"\"\n",
+        "        if isinstance(self.x, np.ndarray):\n",
+        "            self.x = np.hstack([np.ones((self.x.shape[0], 1)), self.x])\n",
+        "        else:\n",
+        "            # Assuming x is a pandas DataFrame\n",
+        "            self.x['Intercept'] = 1.0\n",
         "\n",
         "    def ols_regression(self):\n",
+        "        \"\"\"Performs Ordinary Least Squares (OLS) regression.\"\"\"\n",
         "        if self.regression_type == \"ols\":\n",
         "            model = sm.OLS(self.y, self.x).fit()\n",
-        "            summary = model.summary()\n",
         "            params = model.params\n",
         "            bse = model.bse\n",
         "            tvalues = model.tvalues\n",
         "            pvalues = model.pvalues\n",
         "\n",
-        "            # Storing results in the required format\n",
+        "            # Storing results in the dictionary\n",
         "            for param in params.index:\n",
         "                self.results[param] = {\n",
         "                    'coefficient': params[param],\n",
@@ -899,10 +911,26 @@
         "                }\n",
         "\n",
         "    def summary(self):\n",
-        "        # Print formatted summary table\n",
+        "        \"\"\"Prints the summary of the OLS regression results.\"\"\"\n",
         "        print(f\"{'Variable name':<12} {'Coefficient':>12} {'Std Error':>12} {'t-statistic':>12} {'p-value':>12}\")\n",
         "        for variable, result in self.results.items():\n",
         "            print(f\"{variable:<12} {result['coefficient']:>12.4f} {result['standard_error']:>12.4f} {result['t_stat']:>12.4f} {result['p_value']:>12.4e}\")\n",
+        "\n",
+        "    def get_coefficients(self):\n",
+        "        \"\"\"Returns the coefficients of the OLS regression.\"\"\"\n",
+        "        return {key: value['coefficient'] for key, value in self.results.items()}\n",
+        "\n",
+        "    def get_standard_errors(self):\n",
+        "        \"\"\"Returns the standard errors of the OLS regression.\"\"\"\n",
+        "        return {key: value['standard_error'] for key, value in self.results.items()}\n",
+        "\n",
+        "    def get_t_statistics(self):\n",
+        "        \"\"\"Returns the t-statistics of the OLS regression.\"\"\"\n",
+        "        return {key: value['t_stat'] for key, value in self.results.items()}\n",
+        "\n",
+        "    def get_p_values(self):\n",
+        "        \"\"\"Returns the p-values of the OLS regression.\"\"\"\n",
+        "        return {key: value['p_value'] for key, value in self.results.items()}\n",
         "\n"
       ]
     }
