--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -852,48 +852,43 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 7,
       "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
       "metadata": {
         "id": "adbc4202-9586-4e18-b8d6-54291c2174f1"
       },
       "outputs": [],
       "source": [
-        "#si-exercise\n",
-        "\n",
+        "import pandas as pd\n",
         "import numpy as np\n",
         "import statsmodels.api as sm\n",
         "\n",
         "class RegressionModel:\n",
-        "    def __init__(self, x, y, create_intercept=False, regression_type=\"ols\"):\n",
+        "    def __init__(self, x: pd.DataFrame, y: pd.DataFrame, create_intercept: bool = False, regression_type: str = \"ols\"):\n",
         "        \"\"\"\n",
-        "        Initializes the RegressionModel class.\n",
+        "        Initializes the RegressionModel class with exogenous and endogenous variables, and regression type.\n",
         "\n",
-        "        :param x: Independent variables (numpy array or pandas dataframe).\n",
-        "        :param y: Dependent variable (numpy array or pandas dataframe).\n",
+        "        :param x: Independent variables as a pandas dataframe.\n",
+        "        :param y: Dependent variable as a pandas dataframe.\n",
         "        :param create_intercept: Boolean, whether to add an intercept column to x.\n",
-        "        :param regression_type: String, \"ols\" for ordinary least squares regression.\n",
+        "        :param regression_type: String, \"ols\" for ordinary least squares regression (default).\n",
         "        \"\"\"\n",
-        "        self.x = x.copy()  # Ensure x is not modified in place\n",
+        "        self.x = x.copy()\n",
         "        self.y = y.copy()\n",
         "        self.create_intercept = create_intercept\n",
         "        self.regression_type = regression_type\n",
         "        self.results = {}\n",
         "\n",
-        "        # If intercept is requested, add an intercept column to x\n",
+        "        # Add intercept if needed\n",
         "        if self.create_intercept:\n",
         "            self.add_intercept()\n",
         "\n",
         "    def add_intercept(self):\n",
-        "        \"\"\"Adds an intercept (column of ones) to the independent variable x.\"\"\"\n",
-        "        if isinstance(self.x, np.ndarray):\n",
-        "            self.x = np.hstack([np.ones((self.x.shape[0], 1)), self.x])\n",
-        "        else:\n",
-        "            # Assuming x is a pandas DataFrame\n",
-        "            self.x['Intercept'] = 1.0\n",
+        "        \"\"\"Adds an intercept (a column of ones) to the independent variable dataframe x.\"\"\"\n",
+        "        self.x['Intercept'] = 1.0  # Adds a column 'Intercept' filled with ones\n",
         "\n",
         "    def ols_regression(self):\n",
-        "        \"\"\"Performs Ordinary Least Squares (OLS) regression.\"\"\"\n",
+        "        \"\"\"Performs Ordinary Least Squares (OLS) regression using statsmodels OLS.\"\"\"\n",
         "        if self.regression_type == \"ols\":\n",
         "            model = sm.OLS(self.y, self.x).fit()\n",
         "            params = model.params\n",
@@ -912,26 +907,10 @@
         "\n",
         "    def summary(self):\n",
         "        \"\"\"Prints the summary of the OLS regression results.\"\"\"\n",
-        "        print(f\"{'Variable name':<12} {'Coefficient':>12} {'Std Error':>12} {'t-statistic':>12} {'p-value':>12}\")\n",
+        "        print(f\"{'Variable name':<15} {'Coefficient':>12} {'Std Error':>12} {'t-statistic':>12} {'p-value':>12}\")\n",
+        "        print(\"-\" * 65)\n",
         "        for variable, result in self.results.items():\n",
-        "            print(f\"{variable:<12} {result['coefficient']:>12.4f} {result['standard_error']:>12.4f} {result['t_stat']:>12.4f} {result['p_value']:>12.4e}\")\n",
-        "\n",
-        "    def get_coefficients(self):\n",
-        "        \"\"\"Returns the coefficients of the OLS regression.\"\"\"\n",
-        "        return {key: value['coefficient'] for key, value in self.results.items()}\n",
-        "\n",
-        "    def get_standard_errors(self):\n",
-        "        \"\"\"Returns the standard errors of the OLS regression.\"\"\"\n",
-        "        return {key: value['standard_error'] for key, value in self.results.items()}\n",
-        "\n",
-        "    def get_t_statistics(self):\n",
-        "        \"\"\"Returns the t-statistics of the OLS regression.\"\"\"\n",
-        "        return {key: value['t_stat'] for key, value in self.results.items()}\n",
-        "\n",
-        "    def get_p_values(self):\n",
-        "        \"\"\"Returns the p-values of the OLS regression.\"\"\"\n",
-        "        return {key: value['p_value'] for key, value in self.results.items()}\n",
-        "\n"
+        "            print(f\"{variable:<15} {result['coefficient']:>12.4f} {result['standard_error']:>12.4f} {result['t_stat']:>12.4f} {result['p_value']:>12.4e}\")\n"
       ]
     }
   ],
