--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -852,13 +852,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 3,
       "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
       "metadata": {
         "id": "adbc4202-9586-4e18-b8d6-54291c2174f1"
       },
       "outputs": [],
       "source": [
+        "#si-exercise\n",
         "import pandas as pd\n",
         "import numpy as np\n",
         "import statsmodels.api as sm\n",
