--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -852,7 +852,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
       "metadata": {
         "id": "adbc4202-9586-4e18-b8d6-54291c2174f1"
@@ -860,58 +860,52 @@
       "outputs": [],
       "source": [
         "#si-exercise\n",
-        "import pandas as pd\n",
         "import numpy as np\n",
+        "import pandas as pd\n",
         "import statsmodels.api as sm\n",
         "\n",
+        "#si-exercise\n",
         "class RegressionModel:\n",
-        "    def __init__(self, x: pd.DataFrame, y: pd.DataFrame, create_intercept: bool = False, regression_type: str = \"ols\"):\n",
-        "        \"\"\"\n",
-        "        Initializes the RegressionModel class with exogenous and endogenous variables, and regression type.\n",
-        "\n",
-        "        :param x: Independent variables as a pandas dataframe.\n",
-        "        :param y: Dependent variable as a pandas dataframe.\n",
-        "        :param create_intercept: Boolean, whether to add an intercept column to x.\n",
-        "        :param regression_type: String, \"ols\" for ordinary least squares regression (default).\n",
-        "        \"\"\"\n",
-        "        self.x = x.copy()\n",
-        "        self.y = y.copy()\n",
+        "    def __init__(self, x, y, create_intercept=True, regression_type=\"ols\"):\n",
+        "        self.x = x.copy()  # Copy to avoid modifying original data\n",
+        "        self.y = y\n",
         "        self.create_intercept = create_intercept\n",
         "        self.regression_type = regression_type\n",
         "        self.results = {}\n",
         "\n",
-        "        # Add intercept if needed\n",
+        "        # Add intercept if create_intercept is True\n",
         "        if self.create_intercept:\n",
         "            self.add_intercept()\n",
         "\n",
         "    def add_intercept(self):\n",
-        "        \"\"\"Adds an intercept (a column of ones) to the independent variable dataframe x.\"\"\"\n",
-        "        self.x['Intercept'] = 1.0  # Adds a column 'Intercept' filled with ones\n",
+        "        self.x['intercept'] = 1\n",
         "\n",
         "    def ols_regression(self):\n",
-        "        \"\"\"Performs Ordinary Least Squares (OLS) regression using statsmodels OLS.\"\"\"\n",
+        "        # Check if regression type is \"ols\"\n",
         "        if self.regression_type == \"ols\":\n",
-        "            model = sm.OLS(self.y, self.x).fit()\n",
-        "            params = model.params\n",
-        "            bse = model.bse\n",
-        "            tvalues = model.tvalues\n",
-        "            pvalues = model.pvalues\n",
+        "            # Perform Ordinary Least Squares (OLS) regression\n",
+        "            model = sm.OLS(self.y, self.x)\n",
+        "            fit = model.fit()\n",
+        "            params = fit.params\n",
+        "            bse = fit.bse\n",
+        "            tvalues = fit.tvalues\n",
+        "            pvalues = fit.pvalues\n",
         "\n",
-        "            # Storing results in the dictionary\n",
-        "            for param in params.index:\n",
-        "                self.results[param] = {\n",
-        "                    'coefficient': params[param],\n",
-        "                    'standard_error': bse[param],\n",
-        "                    't_stat': tvalues[param],\n",
-        "                    'p_value': pvalues[param]\n",
+        "            # Store results in the required format\n",
+        "            for variable in self.x.columns:\n",
+        "                self.results[variable] = {\n",
+        "                    'coefficient': params[variable],\n",
+        "                    'standard_error': bse[variable],\n",
+        "                    't_stat': tvalues[variable],\n",
+        "                    'p_value': pvalues[variable]\n",
         "                }\n",
         "\n",
         "    def summary(self):\n",
-        "        \"\"\"Prints the summary of the OLS regression results.\"\"\"\n",
-        "        print(f\"{'Variable name':<15} {'Coefficient':>12} {'Std Error':>12} {'t-statistic':>12} {'p-value':>12}\")\n",
-        "        print(\"-\" * 65)\n",
+        "        # Print regression summary table\n",
+        "        print(f\"{'Variable name':<15} {'Coefficient':<15} {'Std. Error':<15} {'t-Statistic':<15} {'p-Value':<15}\")\n",
         "        for variable, result in self.results.items():\n",
-        "            print(f\"{variable:<15} {result['coefficient']:>12.4f} {result['standard_error']:>12.4f} {result['t_stat']:>12.4f} {result['p_value']:>12.4e}\")\n"
+        "            print(f\"{variable:<15} {result['coefficient']:<15.4f} {result['standard_error']:<15.4f} {result['t_stat']:<15.4f} {result['p_value']:<15.4f}\")\n",
+        "\n"
       ]
     }
   ],
