--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -852,7 +852,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
       "metadata": {
         "id": "adbc4202-9586-4e18-b8d6-54291c2174f1"
@@ -860,52 +860,51 @@
       "outputs": [],
       "source": [
         "#si-exercise\n",
-        "import numpy as np\n",
-        "import pandas as pd\n",
-        "import statsmodels.api as sm\n",
         "\n",
-        "#si-exercise\n",
-        "class RegressionModel:\n",
-        "    def __init__(self, x, y, create_intercept=True, regression_type=\"ols\"):\n",
-        "        self.x = x.copy()  # Copy to avoid modifying original data\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "from scipy.stats import t\n",
+        "\n",
+        "\n",
+        "class RegressionModel():\n",
+        "    def __init__(self,x,y,create_intercept,regression_type='ols'):\n",
+        "        self.x = x\n",
         "        self.y = y\n",
         "        self.create_intercept = create_intercept\n",
         "        self.regression_type = regression_type\n",
-        "        self.results = {}\n",
-        "\n",
-        "        # Add intercept if create_intercept is True\n",
-        "        if self.create_intercept:\n",
+        "        self.results={}\n",
+        "        if (self.create_intercept == True):\n",
         "            self.add_intercept()\n",
         "\n",
         "    def add_intercept(self):\n",
         "        self.x['intercept'] = 1\n",
         "\n",
         "    def ols_regression(self):\n",
-        "        # Check if regression type is \"ols\"\n",
-        "        if self.regression_type == \"ols\":\n",
-        "            # Perform Ordinary Least Squares (OLS) regression\n",
-        "            model = sm.OLS(self.y, self.x)\n",
-        "            fit = model.fit()\n",
-        "            params = fit.params\n",
-        "            bse = fit.bse\n",
-        "            tvalues = fit.tvalues\n",
-        "            pvalues = fit.pvalues\n",
+        "        xVal = self.x\n",
+        "        yVal = self.y\n",
+        "        xValT = xVal.T\n",
         "\n",
-        "            # Store results in the required format\n",
-        "            for variable in self.x.columns:\n",
-        "                self.results[variable] = {\n",
-        "                    'coefficient': params[variable],\n",
-        "                    'standard_error': bse[variable],\n",
-        "                    't_stat': tvalues[variable],\n",
-        "                    'p_value': pvalues[variable]\n",
-        "                }\n",
+        "        coefficient = np.dot(np.linalg.inv(np.dot(xValT,xVal)), (np.dot(xValT,yVal)))\n",
+        "        df = (len(self.x) - len(self.x.columns))\n",
+        "        s_square = (np.dot(((yVal - np.dot(xVal,coefficient)).T),(yVal - np.dot(xVal,coefficient))))/df\n",
+        "        covariance = np.dot(s_square,np.linalg.inv(np.dot(xValT,xVal)))\n",
+        "        variance = np.diag(covariance)\n",
+        "        stdErr= np.sqrt(variance)\n",
+        "        tstat = coefficient / stdErr\n",
+        "        pVal = t.sf(tstat, df)\n",
+        "\n",
+        "\n",
+        "        for i in range(len(self.x.columns)):\n",
+        "            self.results[self.x.columns[i]] = {'coefficient': coefficient[i], 'standard_error': stdErr[i], 't_stat': tstat[i], 'p_value': pVal[i]}\n",
+        "\n",
+        "        return self.results\n",
         "\n",
         "    def summary(self):\n",
-        "        # Print regression summary table\n",
-        "        print(f\"{'Variable name':<15} {'Coefficient':<15} {'Std. Error':<15} {'t-Statistic':<15} {'p-Value':<15}\")\n",
-        "        for variable, result in self.results.items():\n",
-        "            print(f\"{variable:<15} {result['coefficient']:<15.4f} {result['standard_error']:<15.4f} {result['t_stat']:<15.4f} {result['p_value']:<15.4f}\")\n",
-        "\n"
+        "        self.ols_regression()\n",
+        "        summaryTable = pd.DataFrame.from_dict(self.results,orient ='index')\n",
+        "\n",
+        "\n",
+        "        print(summaryTable)\n"
       ]
     }
   ],
