--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -852,7 +852,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 6,
       "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
       "metadata": {
         "id": "adbc4202-9586-4e18-b8d6-54291c2174f1"
@@ -866,45 +866,77 @@
         "from scipy.stats import t\n",
         "\n",
         "\n",
-        "class RegressionModel():\n",
-        "    def __init__(self,x,y,create_intercept,regression_type='ols'):\n",
-        "        self.x = x\n",
+        "class RegressionModel:\n",
+        "    def __init__(self, x, y, create_intercept, regression_type='ols'):\n",
+        "        \"\"\"\n",
+        "        Initialize the regression model with exogenous (x) and endogenous (y) variables,\n",
+        "        as well as options for intercept and regression type.\n",
+        "        \"\"\"\n",
+        "        self.x = x.copy()  # Using copy to avoid altering the original data\n",
         "        self.y = y\n",
         "        self.create_intercept = create_intercept\n",
         "        self.regression_type = regression_type\n",
-        "        self.results={}\n",
-        "        if (self.create_intercept == True):\n",
+        "        self.results = {}\n",
+        "\n",
+        "        if self.create_intercept:\n",
         "            self.add_intercept()\n",
         "\n",
         "    def add_intercept(self):\n",
+        "        \"\"\"\n",
+        "        Adds a column of ones to the exogenous variable dataframe for the intercept.\n",
+        "        \"\"\"\n",
         "        self.x['intercept'] = 1\n",
         "\n",
         "    def ols_regression(self):\n",
-        "        xVal = self.x\n",
-        "        yVal = self.y\n",
-        "        xValT = xVal.T\n",
+        "        \"\"\"\n",
+        "        Perform Ordinary Least Squares (OLS) regression on the provided x and y data.\n",
+        "        Calculate coefficients, standard errors, t-statistics, and p-values.\n",
+        "        \"\"\"\n",
+        "        X = self.x.values\n",
+        "        Y = self.y.values\n",
         "\n",
-        "        coefficient = np.dot(np.linalg.inv(np.dot(xValT,xVal)), (np.dot(xValT,yVal)))\n",
-        "        df = (len(self.x) - len(self.x.columns))\n",
-        "        s_square = (np.dot(((yVal - np.dot(xVal,coefficient)).T),(yVal - np.dot(xVal,coefficient))))/df\n",
-        "        covariance = np.dot(s_square,np.linalg.inv(np.dot(xValT,xVal)))\n",
-        "        variance = np.diag(covariance)\n",
-        "        stdErr= np.sqrt(variance)\n",
-        "        tstat = coefficient / stdErr\n",
-        "        pVal = t.sf(tstat, df)\n",
+        "        # OLS estimation: (X'X)^-1 X'Y\n",
+        "        Xt = X.T\n",
+        "        XtX_inv = np.linalg.inv(np.dot(Xt, X))\n",
+        "        beta = np.dot(XtX_inv, np.dot(Xt, Y))  # Coefficients\n",
         "\n",
+        "        # Degrees of freedom\n",
+        "        df = len(self.x) - len(self.x.columns)\n",
         "\n",
-        "        for i in range(len(self.x.columns)):\n",
-        "            self.results[self.x.columns[i]] = {'coefficient': coefficient[i], 'standard_error': stdErr[i], 't_stat': tstat[i], 'p_value': pVal[i]}\n",
+        "        # Residuals and variance estimation\n",
+        "        residuals = Y - np.dot(X, beta)\n",
+        "        s_squared = np.dot(residuals.T, residuals) / df\n",
+        "        covariance_matrix = s_squared * XtX_inv\n",
+        "\n",
+        "        # Standard errors, t-statistics, and p-values\n",
+        "        standard_errors = np.sqrt(np.diag(covariance_matrix))\n",
+        "        t_stats = beta / standard_errors\n",
+        "        p_values = 2 * t.sf(np.abs(t_stats), df)  # Two-tailed p-values\n",
+        "\n",
+        "        # Store results in a dictionary\n",
+        "        for i, column in enumerate(self.x.columns):\n",
+        "            self.results[column] = {\n",
+        "                'coefficient': beta[i],\n",
+        "                'standard_error': standard_errors[i],\n",
+        "                't_stat': t_stats[i],\n",
+        "                'p_value': p_values[i]\n",
+        "            }\n",
         "\n",
         "        return self.results\n",
         "\n",
         "    def summary(self):\n",
+        "        \"\"\"\n",
+        "        Print a summary table of the OLS regression results with variable names,\n",
+        "        coefficients, standard errors, t-statistics, and p-values.\n",
+        "        \"\"\"\n",
+        "        # Perform OLS regression before generating summary\n",
         "        self.ols_regression()\n",
-        "        summaryTable = pd.DataFrame.from_dict(self.results,orient ='index')\n",
         "\n",
+        "        # Create and print summary table\n",
+        "        summary_table = pd.DataFrame(self.results).T\n",
+        "        print(summary_table[['coefficient', 'standard_error', 't_stat', 'p_value']])\n",
         "\n",
-        "        print(summaryTable)\n"
+        "\n"
       ]
     }
   ],
