--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -852,7 +852,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 7,
       "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
       "metadata": {
         "id": "adbc4202-9586-4e18-b8d6-54291c2174f1"
@@ -860,19 +860,18 @@
       "outputs": [],
       "source": [
         "#si-exercise\n",
-        "\n",
         "import pandas as pd\n",
         "import numpy as np\n",
         "from scipy.stats import t\n",
         "\n",
         "\n",
-        "class RegressionModel:\n",
+        "class RegressionModel():\n",
         "    def __init__(self, x, y, create_intercept, regression_type='ols'):\n",
         "        \"\"\"\n",
-        "        Initialize the regression model with exogenous (x) and endogenous (y) variables,\n",
-        "        as well as options for intercept and regression type.\n",
+        "        Initialize the regression model with input data x, output data y,\n",
+        "        option to add an intercept, and regression type (default is 'ols').\n",
         "        \"\"\"\n",
-        "        self.x = x.copy()  # Using copy to avoid altering the original data\n",
+        "        self.x = x\n",
         "        self.y = y\n",
         "        self.create_intercept = create_intercept\n",
         "        self.regression_type = regression_type\n",
@@ -883,42 +882,44 @@
         "\n",
         "    def add_intercept(self):\n",
         "        \"\"\"\n",
-        "        Adds a column of ones to the exogenous variable dataframe for the intercept.\n",
+        "        Adds an intercept column (filled with 1s) to the exogenous variable matrix.\n",
         "        \"\"\"\n",
         "        self.x['intercept'] = 1\n",
         "\n",
         "    def ols_regression(self):\n",
         "        \"\"\"\n",
-        "        Perform Ordinary Least Squares (OLS) regression on the provided x and y data.\n",
-        "        Calculate coefficients, standard errors, t-statistics, and p-values.\n",
+        "        Performs Ordinary Least Squares (OLS) regression.\n",
+        "        It computes the coefficients, standard errors, t-statistics, and p-values.\n",
         "        \"\"\"\n",
-        "        X = self.x.values\n",
-        "        Y = self.y.values\n",
-        "\n",
-        "        # OLS estimation: (X'X)^-1 X'Y\n",
+        "        X = self.x\n",
+        "        Y = self.y\n",
         "        Xt = X.T\n",
-        "        XtX_inv = np.linalg.inv(np.dot(Xt, X))\n",
-        "        beta = np.dot(XtX_inv, np.dot(Xt, Y))  # Coefficients\n",
+        "\n",
+        "        # Calculate coefficients using (X'X)^(-1) X'Y\n",
+        "        coefficients = np.dot(np.linalg.inv(np.dot(Xt, X)), np.dot(Xt, Y))\n",
         "\n",
         "        # Degrees of freedom\n",
-        "        df = len(self.x) - len(self.x.columns)\n",
+        "        df = len(X) - len(X.columns)\n",
         "\n",
-        "        # Residuals and variance estimation\n",
-        "        residuals = Y - np.dot(X, beta)\n",
-        "        s_squared = np.dot(residuals.T, residuals) / df\n",
-        "        covariance_matrix = s_squared * XtX_inv\n",
+        "        # Residual sum of squares and variance\n",
+        "        residuals = Y - np.dot(X, coefficients)\n",
+        "        s_square = np.dot(residuals.T, residuals) / df\n",
         "\n",
-        "        # Standard errors, t-statistics, and p-values\n",
-        "        standard_errors = np.sqrt(np.diag(covariance_matrix))\n",
-        "        t_stats = beta / standard_errors\n",
-        "        p_values = 2 * t.sf(np.abs(t_stats), df)  # Two-tailed p-values\n",
+        "        # Covariance matrix and standard errors\n",
+        "        covariance_matrix = s_square * np.linalg.inv(np.dot(Xt, X))\n",
+        "        variance = np.diag(covariance_matrix)\n",
+        "        std_err = np.sqrt(variance)\n",
         "\n",
-        "        # Store results in a dictionary\n",
-        "        for i, column in enumerate(self.x.columns):\n",
+        "        # t-statistics and p-values\n",
+        "        t_stat = coefficients / std_err\n",
+        "        p_values = t.sf(np.abs(t_stat), df)\n",
+        "\n",
+        "        # Store the results\n",
+        "        for i, column in enumerate(X.columns):\n",
         "            self.results[column] = {\n",
-        "                'coefficient': beta[i],\n",
-        "                'standard_error': standard_errors[i],\n",
-        "                't_stat': t_stats[i],\n",
+        "                'coefficient': coefficients[i],\n",
+        "                'standard_error': std_err[i],\n",
+        "                't_stat': t_stat[i],\n",
         "                'p_value': p_values[i]\n",
         "            }\n",
         "\n",
@@ -926,15 +927,12 @@
         "\n",
         "    def summary(self):\n",
         "        \"\"\"\n",
-        "        Print a summary table of the OLS regression results with variable names,\n",
-        "        coefficients, standard errors, t-statistics, and p-values.\n",
+        "        Prints the summary of the OLS regression including coefficients,\n",
+        "        standard errors, t-statistics, and p-values.\n",
         "        \"\"\"\n",
-        "        # Perform OLS regression before generating summary\n",
         "        self.ols_regression()\n",
-        "\n",
-        "        # Create and print summary table\n",
-        "        summary_table = pd.DataFrame(self.results).T\n",
-        "        print(summary_table[['coefficient', 'standard_error', 't_stat', 'p_value']])\n",
+        "        summary_table = pd.DataFrame.from_dict(self.results, orient='index')\n",
+        "        print(summary_table)\n",
         "\n",
         "\n"
       ]
