--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -852,7 +852,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 8,
       "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
       "metadata": {
         "id": "adbc4202-9586-4e18-b8d6-54291c2174f1"
@@ -863,7 +863,6 @@
         "import pandas as pd\n",
         "import numpy as np\n",
         "from scipy.stats import t\n",
-        "\n",
         "\n",
         "class RegressionModel():\n",
         "    def __init__(self, x, y, create_intercept, regression_type='ols'):\n",
@@ -895,10 +894,10 @@
         "        Y = self.y\n",
         "        Xt = X.T\n",
         "\n",
-        "        # Calculate coefficients using (X'X)^(-1) X'Y\n",
-        "        coefficients = np.dot(np.linalg.inv(np.dot(Xt, X)), np.dot(Xt, Y))\n",
+        "        # Calculate coefficients using pseudo-inverse for numerical stability\n",
+        "        coefficients = np.dot(np.linalg.pinv(np.dot(Xt, X)), np.dot(Xt, Y))\n",
         "\n",
-        "        # Degrees of freedom\n",
+        "        # Degrees of freedom: n - p\n",
         "        df = len(X) - len(X.columns)\n",
         "\n",
         "        # Residual sum of squares and variance\n",
@@ -906,13 +905,13 @@
         "        s_square = np.dot(residuals.T, residuals) / df\n",
         "\n",
         "        # Covariance matrix and standard errors\n",
-        "        covariance_matrix = s_square * np.linalg.inv(np.dot(Xt, X))\n",
+        "        covariance_matrix = s_square * np.linalg.pinv(np.dot(Xt, X))\n",
         "        variance = np.diag(covariance_matrix)\n",
         "        std_err = np.sqrt(variance)\n",
         "\n",
-        "        # t-statistics and p-values\n",
+        "        # t-statistics and two-tailed p-values\n",
         "        t_stat = coefficients / std_err\n",
-        "        p_values = t.sf(np.abs(t_stat), df)\n",
+        "        p_values = 2 * t.sf(np.abs(t_stat), df)\n",
         "\n",
         "        # Store the results\n",
         "        for i, column in enumerate(X.columns):\n",
@@ -933,7 +932,6 @@
         "        self.ols_regression()\n",
         "        summary_table = pd.DataFrame.from_dict(self.results, orient='index')\n",
         "        print(summary_table)\n",
-        "\n",
         "\n"
       ]
     }
