--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -852,7 +852,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 9,
       "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
       "metadata": {
         "id": "adbc4202-9586-4e18-b8d6-54291c2174f1"
@@ -864,11 +864,13 @@
         "import numpy as np\n",
         "from scipy.stats import t\n",
         "\n",
+        "\n",
         "class RegressionModel():\n",
         "    def __init__(self, x, y, create_intercept, regression_type='ols'):\n",
         "        \"\"\"\n",
-        "        Initialize the regression model with input data x, output data y,\n",
-        "        option to add an intercept, and regression type (default is 'ols').\n",
+        "        Initialize the RegressionModel with input variables (x),\n",
+        "        output variable (y), an option to create an intercept, and\n",
+        "        the type of regression (default is 'ols').\n",
         "        \"\"\"\n",
         "        self.x = x\n",
         "        self.y = y\n",
@@ -876,62 +878,66 @@
         "        self.regression_type = regression_type\n",
         "        self.results = {}\n",
         "\n",
-        "        if self.create_intercept:\n",
+        "        # Add intercept column if create_intercept is True\n",
+        "        if self.create_intercept == True:\n",
         "            self.add_intercept()\n",
         "\n",
         "    def add_intercept(self):\n",
         "        \"\"\"\n",
-        "        Adds an intercept column (filled with 1s) to the exogenous variable matrix.\n",
+        "        Adds a column of 1s to the independent variables matrix (self.x)\n",
+        "        to act as the intercept term for the regression.\n",
         "        \"\"\"\n",
         "        self.x['intercept'] = 1\n",
         "\n",
         "    def ols_regression(self):\n",
         "        \"\"\"\n",
         "        Performs Ordinary Least Squares (OLS) regression.\n",
-        "        It computes the coefficients, standard errors, t-statistics, and p-values.\n",
+        "        Calculates the regression coefficients, standard errors, t-statistics,\n",
+        "        and p-values for each independent variable.\n",
         "        \"\"\"\n",
-        "        X = self.x\n",
-        "        Y = self.y\n",
-        "        Xt = X.T\n",
+        "        xVal = self.x\n",
+        "        yVal = self.y\n",
+        "        xValT = xVal.T\n",
         "\n",
-        "        # Calculate coefficients using pseudo-inverse for numerical stability\n",
-        "        coefficients = np.dot(np.linalg.pinv(np.dot(Xt, X)), np.dot(Xt, Y))\n",
+        "        # Calculate regression coefficients using (X'X)^(-1) X'Y\n",
+        "        coefficient = np.dot(np.linalg.inv(np.dot(xValT, xVal)), np.dot(xValT, yVal))\n",
         "\n",
-        "        # Degrees of freedom: n - p\n",
-        "        df = len(X) - len(X.columns)\n",
+        "        # Degrees of freedom: n - p, where n is the number of samples and p is the number of parameters\n",
+        "        df = len(self.x) - len(self.x.columns)\n",
         "\n",
-        "        # Residual sum of squares and variance\n",
-        "        residuals = Y - np.dot(X, coefficients)\n",
-        "        s_square = np.dot(residuals.T, residuals) / df\n",
+        "        # Calculate residual sum of squares (RSS) and the variance estimate (s^2)\n",
+        "        s_square = np.dot((yVal - np.dot(xVal, coefficient)).T, (yVal - np.dot(xVal, coefficient))) / df\n",
         "\n",
-        "        # Covariance matrix and standard errors\n",
-        "        covariance_matrix = s_square * np.linalg.pinv(np.dot(Xt, X))\n",
-        "        variance = np.diag(covariance_matrix)\n",
-        "        std_err = np.sqrt(variance)\n",
+        "        # Calculate the covariance matrix and standard errors for the coefficients\n",
+        "        covariance = np.dot(s_square, np.linalg.inv(np.dot(xValT, xVal)))\n",
+        "        variance = np.diag(covariance)\n",
+        "        stdErr = np.sqrt(variance)\n",
         "\n",
-        "        # t-statistics and two-tailed p-values\n",
-        "        t_stat = coefficients / std_err\n",
-        "        p_values = 2 * t.sf(np.abs(t_stat), df)\n",
+        "        # Calculate t-statistics for each coefficient (coefficient divided by standard error)\n",
+        "        tstat = coefficient / stdErr\n",
         "\n",
-        "        # Store the results\n",
-        "        for i, column in enumerate(X.columns):\n",
-        "            self.results[column] = {\n",
-        "                'coefficient': coefficients[i],\n",
-        "                'standard_error': std_err[i],\n",
-        "                't_stat': t_stat[i],\n",
-        "                'p_value': p_values[i]\n",
+        "        # Calculate the p-values for each t-statistic using the Student's t-distribution\n",
+        "        pVal = t.sf(np.abs(tstat), df) * 2  # Two-tailed p-value for hypothesis testing\n",
+        "\n",
+        "        # Store results for each independent variable (coefficient, std error, t-stat, p-value)\n",
+        "        for i in range(len(self.x.columns)):\n",
+        "            self.results[self.x.columns[i]] = {\n",
+        "                'coefficient': coefficient[i],\n",
+        "                'standard_error': stdErr[i],\n",
+        "                't_stat': tstat[i],\n",
+        "                'p_value': pVal[i]\n",
         "            }\n",
         "\n",
-        "        return self.results\n",
+        "        return self.results  # Return the dictionary of results\n",
         "\n",
         "    def summary(self):\n",
         "        \"\"\"\n",
-        "        Prints the summary of the OLS regression including coefficients,\n",
-        "        standard errors, t-statistics, and p-values.\n",
+        "        Prints a summary of the regression results, including coefficients,\n",
+        "        standard errors, t-statistics, and p-values for each variable.\n",
         "        \"\"\"\n",
         "        self.ols_regression()\n",
-        "        summary_table = pd.DataFrame.from_dict(self.results, orient='index')\n",
-        "        print(summary_table)\n",
+        "        summaryTable = pd.DataFrame.from_dict(self.results, orient='index')\n",
+        "        print(summaryTable)\n",
         "\n"
       ]
     }
