--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -852,7 +852,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 10,
       "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
       "metadata": {
         "id": "adbc4202-9586-4e18-b8d6-54291c2174f1"
@@ -866,79 +866,44 @@
         "\n",
         "\n",
         "class RegressionModel():\n",
-        "    def __init__(self, x, y, create_intercept, regression_type='ols'):\n",
-        "        \"\"\"\n",
-        "        Initialize the RegressionModel with input variables (x),\n",
-        "        output variable (y), an option to create an intercept, and\n",
-        "        the type of regression (default is 'ols').\n",
-        "        \"\"\"\n",
+        "    def _init_(self,x,y,create_intercept,regression_type='ols'):\n",
         "        self.x = x\n",
         "        self.y = y\n",
         "        self.create_intercept = create_intercept\n",
         "        self.regression_type = regression_type\n",
-        "        self.results = {}\n",
-        "\n",
-        "        # Add intercept column if create_intercept is True\n",
-        "        if self.create_intercept == True:\n",
+        "        self.results={}\n",
+        "        if (self.create_intercept == True):\n",
         "            self.add_intercept()\n",
         "\n",
         "    def add_intercept(self):\n",
-        "        \"\"\"\n",
-        "        Adds a column of 1s to the independent variables matrix (self.x)\n",
-        "        to act as the intercept term for the regression.\n",
-        "        \"\"\"\n",
         "        self.x['intercept'] = 1\n",
         "\n",
         "    def ols_regression(self):\n",
-        "        \"\"\"\n",
-        "        Performs Ordinary Least Squares (OLS) regression.\n",
-        "        Calculates the regression coefficients, standard errors, t-statistics,\n",
-        "        and p-values for each independent variable.\n",
-        "        \"\"\"\n",
         "        xVal = self.x\n",
         "        yVal = self.y\n",
         "        xValT = xVal.T\n",
         "\n",
-        "        # Calculate regression coefficients using (X'X)^(-1) X'Y\n",
-        "        coefficient = np.dot(np.linalg.inv(np.dot(xValT, xVal)), np.dot(xValT, yVal))\n",
-        "\n",
-        "        # Degrees of freedom: n - p, where n is the number of samples and p is the number of parameters\n",
-        "        df = len(self.x) - len(self.x.columns)\n",
-        "\n",
-        "        # Calculate residual sum of squares (RSS) and the variance estimate (s^2)\n",
-        "        s_square = np.dot((yVal - np.dot(xVal, coefficient)).T, (yVal - np.dot(xVal, coefficient))) / df\n",
-        "\n",
-        "        # Calculate the covariance matrix and standard errors for the coefficients\n",
-        "        covariance = np.dot(s_square, np.linalg.inv(np.dot(xValT, xVal)))\n",
+        "        coefficient = np.dot(np.linalg.inv(np.dot(xValT,xVal)), (np.dot(xValT,yVal)))\n",
+        "        df = (len(self.x) - len(self.x.columns))\n",
+        "        s_square = (np.dot(((yVal - np.dot(xVal,coefficient)).T),(yVal - np.dot(xVal,coefficient))))/df\n",
+        "        covariance = np.dot(s_square,np.linalg.inv(np.dot(xValT,xVal)))\n",
         "        variance = np.diag(covariance)\n",
-        "        stdErr = np.sqrt(variance)\n",
-        "\n",
-        "        # Calculate t-statistics for each coefficient (coefficient divided by standard error)\n",
+        "        stdErr= np.sqrt(variance)\n",
         "        tstat = coefficient / stdErr\n",
+        "        pVal = t.sf(tstat, df)\n",
         "\n",
-        "        # Calculate the p-values for each t-statistic using the Student's t-distribution\n",
-        "        pVal = t.sf(np.abs(tstat), df) * 2  # Two-tailed p-value for hypothesis testing\n",
         "\n",
-        "        # Store results for each independent variable (coefficient, std error, t-stat, p-value)\n",
         "        for i in range(len(self.x.columns)):\n",
-        "            self.results[self.x.columns[i]] = {\n",
-        "                'coefficient': coefficient[i],\n",
-        "                'standard_error': stdErr[i],\n",
-        "                't_stat': tstat[i],\n",
-        "                'p_value': pVal[i]\n",
-        "            }\n",
+        "            self.results[self.x.columns[i]] = {'coefficient': coefficient[i], 'standard_error': stdErr[i], 't_stat': tstat[i], 'p_value': pVal[i]}\n",
         "\n",
-        "        return self.results  # Return the dictionary of results\n",
+        "        return self.results\n",
         "\n",
         "    def summary(self):\n",
-        "        \"\"\"\n",
-        "        Prints a summary of the regression results, including coefficients,\n",
-        "        standard errors, t-statistics, and p-values for each variable.\n",
-        "        \"\"\"\n",
         "        self.ols_regression()\n",
-        "        summaryTable = pd.DataFrame.from_dict(self.results, orient='index')\n",
-        "        print(summaryTable)\n",
-        "\n"
+        "        summaryTable = pd.DataFrame.from_dict(self.results,orient ='index')\n",
+        "\n",
+        "\n",
+        "        print(summaryTable)"
       ]
     }
   ],
